--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,10 @@ dependencies = [
     "fastapi[standard]>=0.115.14",
     "pendulum>=3.1.0",
     "pydantic>=2.11.7",
+    "pytest>=8.4.1",
+]
+
+[tool.pytest.ini_options]
+pythonpath = [
+    "src",
 ]
