--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.14",
+    "loguru>=0.7.3",
     "pendulum>=3.1.0",
     "pydantic>=2.11.7",
     "pytest>=8.4.1",
